Update loader gif, optimization and z-index bug + remove useless things

--- a/css/style.css
+++ b/css/style.css
@@ -1279,7 +1279,7 @@ input[type="text"] {
   top: 0px;
   width: 100%;
   height: 100%;
-  z-index: 9999;
+  z-index: 999999999;
   background: url(../images/loader.gif) center no-repeat #ba571c;
 }
 
